--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
+    "jsbarcode": "^3.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-webcam": "^7.1.1"
