--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsbarcode": "^3.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
     "react-webcam": "^7.1.1"
   },
   "devDependencies": {
