--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
+    "react-spinners": "^0.13.8",
     "react-webcam": "^7.1.1"
   },
   "devDependencies": {
